# PythonGame

./: .gitignore  Launch Better Together Client.command  Launch Better Together Server.command  README.md  github link.txt  pyproject.toml
Client/: client.pyw  player.py  server shortcut.py
Credit/: Black Sail Ship - Bleed's Game Art.txt  Cannonball by Dan Sevenstar -DontMind8-.txt  Wood plank by weirdybeardyman.txt  Wooden ship tiles by Tuomo Untinen.txt
Credits/: Aim by oglsdl.txt  Black Sail Ship by Bleed's Game Art.txt  Cannonball by Dan Sevenstar -DontMind8-.txt  Sailors & Pirates by Svetlana Kushnariova & Jordan Irwin.txt  Wood plank by weirdybeardyman.txt  Wooden ship tiles by Tuomo Untinen.txt
Doc/: sprites.txt
Documents/: Conceptul jocului.txt  sprites.txt
Server/: game.py  player.py  server.py
docs/: architecture.md  assets-licenses.md  contributing.md  gameplay-status.md  quickstart.md
reference/: game-concept.md  sprites.txt
scripts/: build_runtime_assets.py
src/better_together_client/: .env  __init__.py  __main__.py  app.py  assets.py  cli.py  game_loop.py  network.py  player.py  render.py  session.py
tests/: __init__.py  test_asset_catalog.py  test_asset_pipeline.py  test_assets.py  test_client_game_loop.py  test_client_network.py  test_client_render.py  test_client_session.py  test_config.py  test_macos_launchers.py  test_package_entrypoints.py  test_protocol.py  test_room_manager.py  test_server_ai.py  test_server_game.py  test_server_network.py  test_server_protocol.py  test_support.py  test_transport.py
(+18 files in other folders)
